namespace LingoPartnerDomain;

public enum UserRole
{
  Admin,
  Teacher,
  Student
}